fixing story redirect using url param, adding to homepage

--- a/views/story.hbs
+++ b/views/story.hbs
@@ -32,8 +32,9 @@
           </p>
         </div>
         <button
+          id="story-back"
+          onclick="window.location.href = '/?stories=true'"
           class="text-green-500 bg-black text-xs font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202]"
-          onclick="window.location.href='/'"
         >
           <div class="flex w-40">
             <img class="mr-2" src="/images/logos/right-arrow.png" />
