Adding timestrings to stories, adding a new project

--- a/views/stories.hbs
+++ b/views/stories.hbs
@@ -7,7 +7,7 @@
         {{this.name}}
       </div>
       <p class="font-bold text-l mb-2 font-mono text-yellow-500">
-        6/6/22
+        {{this.datestring}}
       </p>
     </div>
     <p class="font-mono text-white text-xs py-2">
