--- a/views/story.hbs
+++ b/views/story.hbs
@@ -24,7 +24,7 @@
               {{story.name}}
             </div>
             <p class="font-bold text-l mb-2 font-mono text-yellow-500">
-              5/6/22
+              {{story.datestring}}
             </p>
           </div>
           <p class="font-mono text-white text-xs py-2">
