--- a/views/stories.hbs
+++ b/views/stories.hbs
@@ -11,7 +11,7 @@
       </p>
     </div>
     <p class="font-mono text-white text-xs py-2">
-      {{this.contents}}
+      {{this.headline}}
     </p>
     <button
       class="text-green-500 bg-black font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202]"
