ssl flags, updated data, data fixes

--- a/views/story.hbs
+++ b/views/story.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/index.ashes.css" />
     <title>George - Story</title>
   </head>
-  <body>
+  <body style="background-color: black">
     <canvas id="bg" style="position: fixed; top: 0; left: 0"></canvas>
     <main class="relative w-3/4">
       <div class="absolute left-0 top-20 p-6 mx-4">
