restructurings needed for prisma, cleanup

--- a/views/stories.hbs
+++ b/views/stories.hbs
@@ -15,7 +15,7 @@
     </p>
     <button
       class="text-green-500 bg-black font-bold font-mono py-2 px-4 mb-1 border rounded border-b-4 border-green-500 hover:bg-[#360202]"
-      onclick="window.location.href='/story/{{this.keyword}}'"
+      onclick="window.location.href='/html/story/{{this.keyword}}'"
     >
       Read more
     </button>
