--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,14 +2,14 @@
   <div
     class="flex flex-col max-w-sm border-1 overflow-hidden border-yellow-500 bg-black p-2 mb-6"
   >
-    <img src="images/projects/{{this.imageName}}" class="max-h-70 p-2" />
+    <img src="images/projects/{{this.imagename}}" class="max-h-70 p-2" />
     <div class="font-bold text-xl mb-2 font-mono text-yellow-500">
       {{this.name}}
     </div>
     <a
       class="font-mono text-cyan-200 hover:text-cyan-300 mb-2 italic"
       href="{{this.url}}"
-    >{{this.urlName}}</a>
+    >{{this.urlname}}</a>
     <p class="font-mono text-white text-sm py-2">
       {{this.description}}
     </p>
