CR of story descriptors fully working

--- a/views/story.hbs
+++ b/views/story.hbs
@@ -1,10 +1,11 @@
 <html lang="en">
   <head>
+    <meta name="id" content={{story.id}} />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="fractal.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/index.ashes.js" defer></script>
+    <link rel="icon" type="image/svg+xml" href="fractal.ico" />
     <link rel="stylesheet" href="/index.ashes.css" />
+    <script type="module" src="/index.ashes.js" defer></script>
     <title>George - Story</title>
   </head>
   <body style="background-color: black">
@@ -78,11 +79,11 @@
           >
             <h1
               class="text-yellow-500 font-xl font-bold mb-1 underline-offset-1"
-            >Add Description</h1>
+            >Post Comment</h1>
             <br />
 
-            <p class="text-white text-sm">Select a word to submit your preferred
-              descriptor</p>
+            <p class="text-white text-sm">Select a word to submit it as an
+              ephemeral comment for others to see</p>
 
             <p
               class="text-white text-xs mb-2 leading-tight pt-3 tracking-normal underline font-bold"
