docker-compose setup fully working locally

--- a/views/stories.hbs
+++ b/views/stories.hbs
@@ -20,7 +20,7 @@
       Read more
     </button>
     <p id="recent-comments" class="text-orange-400 text-sm pt-2 leading-8"><i
-      >People describe this as;</i>
+      >Comments;</i>
       {{#each this.reactions}}
         <span class="border rounded-full p-1 border-orange-400">{{this}}</span>
       {{/each}}
