--- a/views/story.hbs
+++ b/views/story.hbs
@@ -88,11 +88,11 @@
             <p
               class="text-white text-xs mb-2 leading-tight pt-3 tracking-normal underline font-bold"
             >
-              Your options</p>
+              Options</p>
             <div class="pb-5" id="react-deck">
               {{#each descriptors}}
                 <button
-                  class="select-modal text-xs bg-black hover:bg-[#360202] p-1 mr-2 mb-2 text-orange-600 focus:outline focus:bg-[#360202] border rounded border-orange-600"
+                  class="select-modal text-xs bg-black hover:bg-[#360202] p-1 mr-2 mb-2 text-orange-400 focus:outline focus:bg-[#360202] border rounded border-orange-400"
                 >{{this}}</button>
               {{/each}}
             </div>
