--- a/views/static.hbs
+++ b/views/static.hbs
@@ -156,12 +156,12 @@
                         <p class="text-orange-600 font-mono bg-black md:text-sm">
                             Living a life of changing perspectives and continual discovery
                         </p>
-                        <button
+                        <a
                             class="ml-6 text-orange-600 bg-black font-bold font-mono px-4 mb-1 border rounded border-orange-600"
-                            id="admin-btn"
+                            href="/admin"
                         >
                             Upend
-                        </button>
+                        </a>
                     </div>
                 </div>
                 <!-- Projects Box -->
