--- a/src/index.hbs
+++ b/src/index.hbs
@@ -48,17 +48,6 @@
                             Latest top artists: 21 pilots, ski aggu, prince
                         </p>
                     </div>
-                    <div
-                        class="py-2 max-w-sm w-full border-yellow-500 text-yellow-500 text-sm bg-black font-mono font-bold mt-4"
-                    >
-                        <img class="inline" src="images/logos/book-stack-16.png" />
-                        <p
-                            id="top-stories-text"
-                            class="inline text-yellow-500 text-sm font-mono font-bold"
-                        >
-                            {{storiesText}}
-                        </p>
-                    </div>
                     <div>
                         <h2 class="text-lg text-white font-mono py-2 font-bold">Find Me</h2>
                         <table class="table-auto">
@@ -161,26 +150,33 @@
                 </div>
                 <!-- Projects Box -->
                 <div id="projects-box" style="display: none">
-                    {{#each projects}}
-                        <div
-                            class="flex flex-col max-w-sm border-2 overflow-hidden border-yellow-500 bg-black p-2 mb-6"
-                        >
-                            <img
-                                src="images/projects/{{this.imagename}}"
-                                class="max-h-70 p-2"
-                            />
-                            <div class="font-bold text-xl mb-2 font-mono text-yellow-500">
-                                {{this.name}}
+                    <div class="md:flex md:flex-row">
+                        {{#each projects}}
+                            <div
+                                class="flex flex-col max-w-sm md:max-w-md border-2 border-yellow-500 bg-black p-2 md:p-6 mb-6 md:mr-6"
+                            >
+                                <img
+                                    src="images/projects/{{this.imagename}}"
+                                    class="max-h-70 p-2"
+                                />
+                                <div
+                                    class="font-bold text-xl mb-2 font-mono text-yellow-500"
+                                >
+                                    {{this.name}}
+                                </div>
+                                <a href="{{this.url}}">
+                                    <img
+                                        src="images/logos/link.png"
+                                        class="pl-20 w-6"
+                                        alt="Image of link to the project url"
+                                    />
+                                </a>
+                                <p class="font-mono text-white text-sm py-2">
+                                    {{this.description}}
+                                </p>
                             </div>
-                            <a
-                                class="font-mono text-cyan-200 hover:text-cyan-300 mb-2 italic"
-                                href="{{this.url}}"
-                            >{{this.urlname}}</a>
-                            <p class="font-mono text-white text-sm py-2">
-                                {{this.description}}
-                            </p>
-                        </div>
-                    {{/each}}
+                        {{/each}}
+                    </div>
                     <p class="text-white font-mono mb-6">
                         Many more projects can be found on my
                         <a
@@ -196,7 +192,7 @@
     <footer>
         <div
             style="position: fixed; bottom: 0; left: 0; height: 30px; z-index: 10; width: 100%"
-            class="bg-orange-600 w-full text-center"
+            class="bg-orange-600 w-full text-center z-10"
         >
             <p class="my-1 font-mono text-xs">Solidarity with
                 <strong>Trans Youth</strong>,
