--- a/src/index.hbs
+++ b/src/index.hbs
@@ -191,8 +191,8 @@
     </body>
     <footer>
         <div
-            style="position: fixed; bottom: 0; left: 0; height: 30px; z-index: 10; width: 100%"
-            class="bg-orange-600 w-full text-center z-10"
+            style="position: fixed; bottom: 0; left: 0; height: 30px; z-index: 30; width: 100%"
+            class="bg-orange-600 w-full text-center"
         >
             <p class="my-1 font-mono text-xs">Solidarity with
                 <strong>Trans Youth</strong>,
